# BodyOfYours

./: .gitignore  .travis.yml  BodyOfYours.pro  CMakeLists.txt  README.md
cfg/: AsusXtionProLive.txt
deprecated/: BodyOfYours.pro
deprecated/src/: file_scanner.cpp  mainwindow.ui  patient_tree_model.cpp  patient_tree_model.h  patientinfodialog.cpp  patientinfodialog.h  reme_scanner_3d.cpp  reme_scanner_3d.h  reme_sensor_check.cpp  reme_sensor_check.h  resources.h  scaninfodialog.ui  scanning_3d.cpp  scanningwindow.cpp  scans_data_tree.cpp  scans_viewer.cpp  scans_viewer.h
deprecated/src/data/: patient.cpp  patient.h  scan.cpp
doc/: patient_crud.md
gui/: mainwindow.ui
lang/: bodyofyours_en.qm  bodyofyours_en.ts  bodyofyours_pl.qm  bodyofyours_pl.ts
src/: Action.h  ActionHub.cpp  ActionHub.h  CMeshStorage.cpp  CMeshStorage.h  Database.cpp  Database.h  EForm.cpp  EForm.h  ExaminationData.h  ExaminationForm.cpp  ExaminationForm.h  ExaminationItem.cpp  ExaminationItem.h  Form.cpp  Form.h  FormButtons.cpp  FormButtons.h  FormViewer.cpp  FormViewer.h  FormWidget.cpp  FormWidget.h  GuiActions.h  ImageData.h  LimitedDataStorage.h  MainWindow.cpp  MainWindow.h  MeshDef.h  MeshDifferenceDlg.cpp  MeshDifferenceDlg.h  MeshProcessing.cpp  MeshProcessing.h  MeshViewer.cpp  MeshViewer.h  ModelHelper.h  ModelViewer.cpp  ModelViewer.h  OGLDummy.cpp  OGLDummy.h  OGLMeshViewer.cpp  (+95 more)
src/data/: patient.cpp  patient.h  scan.cpp  scan.h
